# ocaml-base32

./: README.md  base32.opam  dune-project  guix.scm
.reuse/: dep5
lib/: base32.ml  base32.mli  dune
test/: base32.ml  dune
